# quick-deck-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  __main__.py  main.py  pyproject.toml
doc/: export.md  export_pdf.sh  generate_agenda.sh  generate_content_explicit.sh  generate_content_plain.sh  generate_export_pdf.md
examples/: git.html
src/: app_types.py  chatgpt.py  export.py  generator.py  global_settings.py  prompt.py  tool.py  types.py
tests/: git_big.md  git_small.md  test_end2end.py  test_export.py
