[project]
name = "quick-deck-mcp"
version = "0.0.1"
description = "MCP server backend for quick slide decks: agenda generation, content creation, and export"
authors = [
  { name="Darius Murawski", email="dariusmurawski@hotmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = "==3.13.0"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "openai", # or other Pandoc helpers if you integrate with pandoc
  "pandoc",
  "dotenv",
  "pyright",
  "loguru>=0.7.3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
