[project]
name = "quick-deck-mcp"
version = "0.0.1"
description = "MCP server backend for quick slide decks: agenda generation, content creation, and export"
authors = [
  { name="Darius Murawski", email="dariusmurawski@hotmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = "==3.13.0"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "openai", # or other Pandoc helpers if you integrate with pandoc
  "pandoc",
  "dotenv",
  "pyright",
  "loguru>=0.7.3",
  "aiofiles>=24.1.0",
  "python-multipart>=0.0.20",
  "pypandoc>=1.15",
  "markdown>=3.8.2",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
